--- a/gateway.yaml
+++ b/gateway.yaml
@@ -7,12 +7,8 @@ spec:
     istio: ingressgateway
   servers:
     - port:
-        number: 443
-        name: https
-        protocol: HTTPS
-      tls:
-        mode: SIMPLE
-        credentialName: cert-ssl-secret 
+        number: 3000
+        name: http
+        protocol: HTTP
       hosts:
-        - '*.sreyo.in'
-        #- '*.managedorg.io'
+        - '*'
